...
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mrw-lP-Slc">
                                <rect key="frame" x="60" y="58" width="200" height="30"/>
                                <color key="backgroundColor" red="0.90423318610000003" green="0.90423318610000003" blue="0.90423318610000003" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
                                <state key="normal" title="Upload">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="uploadButtonPressed:" destination="CZ4-MO-1fc" eventType="touchUpInside" id="VBw-ny-mYk"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4w6-Kh-Oml">
                                <rect key="frame" x="60" y="172" width="200" height="30"/>
                                <color key="backgroundColor" red="0.90423318610000003" green="0.90423318610000003" blue="0.90423318610000003" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration">
                                    <bool key="isElement" value="NO"/>
                                </accessibility>
                                <state key="normal" title="Cancel">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="cancelButtonPressed:" destination="CZ4-MO-1fc" eventType="touchUpInside" id="p5Y-jX-hJg"/>
                                </connections>
                            </button>
...
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="resumeButtonPressed:" destination="CZ4-MO-1fc" eventType="touchUpInside" id="qbO-7B-Gwg"/>
                                </connections>
                            </button>
                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Ready" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PUb-A0-dez">
                                <rect key="frame" x="65" y="20" width="190" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="t4e-sk-IvZ">
...
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9VP-tH-cRW">
                                <rect key="frame" x="60" y="58" width="200" height="30"/>
                                <color key="backgroundColor" red="0.90423318610000003" green="0.90423318610000003" blue="0.90423318610000003" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Download">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="downloadButtonPressed:" destination="QUy-BD-bpt" eventType="touchUpInside" id="pFC-lg-XFG"/>
                                </connections>
                            </button>
...
