...
                        </cells>
                        <connections>
                            <outlet property="dataSource" destination="1hT-Ga-Lzi" id="B57-8y-Sgf"/>
                            <outlet property="delegate" destination="1hT-Ga-Lzi" id="03f-cs-eGG"/>
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="Photos" id="YjV-fS-12j">
                        <rightBarButtonItems>
                            <barButtonItem style="plain" systemItem="add" id="CDb-t8-RQo">
                                <connections>
                                    <action selector="addPhotoDidTap:" destination="1hT-Ga-Lzi" id="apT-no-qnh"/>
                                </connections>
                            </barButtonItem>
...
